--- a/integration_test/mint_module/mint_test.yaml
+++ b/integration_test/mint_module/mint_test.yaml
@@ -1,5 +1,7 @@
 - name: Mint event triggered
   inputs:
+    # Sleep 65 seconds to ensure that the mint event happens in the epoch end hook
+    - cmd: sleep 65
     - cmd: seid q mint minter --output --json | jq -r ".denom"
       env: DENOM
     - cmd: seid q mint minter --output --json | jq ".start_date" -r
@@ -16,6 +18,8 @@
       env: LAST_MINT_DATE
     - cmd: seid q mint minter --output --json | jq ".last_mint_height" -r
       env: LAST_MINT_HEIGHT
+    - cmd: seid q bank total --output json | jq -r '.supply[] | select(.denom=="usei") | .amount'
+      env: TOTAL_SUPPLY
   verifiers:
     - type: eval
       expr: DENOM == "usei"
@@ -31,3 +35,6 @@
       expr: LAST_MINT_AMOUNT == 333333333333
     - type: eval
       expr: LAST_MINT_HEIGHT == 0
+    # Total supply should be greater, might might be elss than LAST_MINT_AMOUNT + Genesis balance due to burning tests
+    - type: eval
+      expr: TOTAL_SUPPLY > 5000000000000000000000
