--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -15,30 +15,24 @@ defaults:
 
 jobs:
   build:
+    name: Integration Test (${{ matrix.test.name }})
     runs-on: ubuntu-latest
     timeout-minutes: 20
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
     strategy:
       matrix:
         test: [
           {
-            name: "Verify Sei Chain is able to start up",
-            scripts: [
-              "python3 integration_test/scripts/runner.py integration_test/startup/startup_test.yaml"
-            ]
-          },
-          {
-            name: "Testing Dex Module",
+            name: "Dex Module",
             scripts: [
               "docker exec sei-node-0 integration_test/contracts/deploy_dex_contract.sh mars",
               "python3 integration_test/scripts/runner.py integration_test/dex_module/place_order_test.yaml"
             ]
           },
           {
-            name: "Testing Wasm Module",
+            name: "Wasm Module",
             scripts: [
               "docker exec sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh",
               "python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_delegation_test.yaml",
@@ -49,7 +43,7 @@ jobs:
             ]
           },
           {
-            name: "Testing Mint Module",
+            name: "Mint Module",
             scripts: [
               "python3 integration_test/scripts/runner.py integration_test/mint_module/mint_test.yaml"
             ]
@@ -80,6 +74,8 @@ jobs:
             sleep 10
           done
           sleep 10
+      - name: Verify Sei Chain is running
+        run: python3 integration_test/scripts/runner.py integration_test/startup/startup_test.yaml
       - name: ${{ matrix.test.name }}
         run: |
           for script in ${{ toJson(matrix.test.scripts) }}
