--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -76,9 +76,10 @@ jobs:
           sleep 10
       - name: Verify Sei Chain is running
         run: python3 integration_test/scripts/runner.py integration_test/startup/startup_test.yaml
+
       - name: ${{ matrix.test.name }}
         run: |
-          for script in ${{ toJson(matrix.test.scripts) }}
+          for script in ${{ matrix.test.scripts }}
           do
             $script
           done
