--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -77,13 +77,15 @@ jobs:
             sleep 10
           done
           sleep 10
+
       - name: Verify Sei Chain is running
         run: python3 integration_test/scripts/runner.py integration_test/startup/startup_test.yaml
 
       - name: ${{ matrix.test.name }}
         run: |
           scripts=$(echo '${{ toJson(matrix.test.scripts) }}' | jq -r '.[]')
-          for script in ${{ matrix.test.scripts }}
+          echo $scripts
+          for script in $scripts
           do
             $script
           done
