--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -87,5 +87,5 @@ jobs:
           echo $scripts
           for script in $scripts
           do
-            bash -c "$script"
+            bash -c "${script}"
           done
