--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -84,8 +84,10 @@ jobs:
       - name: ${{ matrix.test.name }}
         run: |
           scripts=$(echo '${{ toJson(matrix.test.scripts) }}' | jq -r '.[]')
+          IFS=$'\n'   # change the internal field separator to newline
           echo $scripts
           for script in $scripts
           do
             bash -c "${script}"
           done
+          unset IFS  # revert the internal field separator back to default
