--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -15,11 +15,42 @@ defaults:
 
 jobs:
   build:
+    name: Integration Test (${{ matrix.test.name }})
     runs-on: ubuntu-latest
     timeout-minutes: 20
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    strategy:
+      # other jobs should run even if one integration test fails
+      fail-fast: false
+      matrix:
+        test: [
+          {
+            name: "Dex Module",
+            scripts: [
+              "docker exec sei-node-0 integration_test/contracts/deploy_dex_contract.sh mars",
+              "python3 integration_test/scripts/runner.py integration_test/dex_module/place_order_test.yaml"
+            ]
+          },
+          {
+            name: "Wasm Module",
+            scripts: [
+              "docker exec sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh",
+              "python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_delegation_test.yaml",
+              "python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_admin_test.yaml",
+              "python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_withdraw_test.yaml",
+              "docker exec sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh",
+              "python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_emergency_withdraw_test.yaml"
+            ]
+          },
+          {
+            name: "Mint Module",
+            scripts: [
+              "python3 integration_test/scripts/runner.py integration_test/mint_module/mint_test.yaml"
+            ]
+          },
+        ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -29,6 +60,9 @@ jobs:
       - name: Pyyaml
         run: |
           pip3 install pyyaml
+
+      - name: Install jq
+        run: sudo apt-get install -y jq
 
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -46,19 +80,16 @@ jobs:
           done
           sleep 10
 
-      - name: Verify Sei Chain is able to start up
+      - name: Verify Sei Chain is running
         run: python3 integration_test/scripts/runner.py integration_test/startup/startup_test.yaml
 
-      - name: Testing Dex Module
+      - name: ${{ matrix.test.name }}
         run: |
-          docker exec sei-node-0 integration_test/contracts/deploy_dex_contract.sh mars
-          python3 integration_test/scripts/runner.py integration_test/dex_module/place_order_test.yaml
-
-      - name: Testing Wasm Module
-        run: |
-          docker exec sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh
-          python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_delegation_test.yaml
-          python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_admin_test.yaml
-          python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_withdraw_test.yaml
-          docker exec sei-node-0 integration_test/contracts/deploy_timelocked_token_contract.sh
-          python3 integration_test/scripts/runner.py integration_test/wasm_module/timelocked_token_emergency_withdraw_test.yaml
+          scripts=$(echo '${{ toJson(matrix.test.scripts) }}' | jq -r '.[]')
+          IFS=$'\n'   # change the internal field separator to newline
+          echo $scripts
+          for script in $scripts
+          do
+            bash -c "${script}"
+          done
+          unset IFS  # revert the internal field separator back to default
