--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -50,6 +50,12 @@ jobs:
               "python3 integration_test/scripts/runner.py integration_test/mint_module/mint_test.yaml"
             ]
           },
+          {
+            name: "Gov Module",
+            scripts: [
+              "python3 integration_test/scripts/runner.py integration_test/gov_module/gov_proposal_test.yaml"
+            ]
+          },
         ]
     steps:
       - uses: actions/checkout@v3
