--- a/integration_test/gov_module/gov_proposal_test.yaml
+++ b/integration_test/gov_module/gov_proposal_test.yaml
@@ -96,6 +96,9 @@
     # Get the tally params again after proposal is passed
     - cmd: seid q gov params --output json | jq -r .tally_params.expedited_quorum
       env: NEW_PARAM
+    # Get the current tally params
+    - cmd: seid q bank total --output json | jq -r .supply[0].amount
+      env: TOTAL_SUPPLY_AFTER_BURN
   verifiers:
     # Check if the new params matches the expected value after proposal
     - type: eval
