--- a/integration_test/oracle_module/set_feeder_test.yaml
+++ b/integration_test/oracle_module/set_feeder_test.yaml
@@ -6,26 +6,22 @@
     # Get admin val addr
     - cmd: printf "12345678\n" | seid keys show node_admin --bech val --output json | jq -r ".address"
       env: ADMIN_VAL_ADDR
-    # stop price feeder
-    - cmd: systemctl stop oracle-price-feeder
     # create new feeder addr
     - cmd: printf "12345678\ny\n" | seid keys add integration_test_feeder --output json | jq -r ".address"
       env: NEW_FEEDER_ADDR
     # get old feeder addr
-    - cmd: printf "12345678\n" | seid q oracle feeder $ADMIN_VAL_ADDR --output json | jq -r ".feeder_addr"
+    - cmd: seid q oracle feeder $ADMIN_VAL_ADDR --output json | jq -r ".feeder_addr"
       env: OLD_FEEDER_ADDR
     # send bank funds to new feeder to populate account
-    - cmd: printf "12345678\n" | seid tx bank send admin $NEW_FEEDER_ADDR 1usei -b block -y --fees 2000usei
+    - cmd: printf "12345678\n" | seid tx bank send admin $NEW_FEEDER_ADDR 1sei -b block -y --fees 2000usei --output json | jq -r ".code"
     # set feeder
-    - cmd: printf "12345678\n" | seid tx oracle set-feeder $NEW_FEEDER_ADDR -b block -y --from admin --fees 2000usei --output json | jq -r ".code"
+    - cmd: printf "12345678\n" | seid tx oracle set-feeder $NEW_FEEDER_ADDR -b block -y --from node_admin --fees 2000usei --output json | jq -r ".code"
       env: SET_FEEDER_ERROR_CODE
     # do a vote and ensure code 0
-    - cmd: printf "12345678\n" | seid tx oracle aggregate-vote 1.5ueth $ADMIN_VAL_ADDR -b block -y --from integration_test_feeder --fees 2000usei --output json | jq -r ".code"
+    - cmd: printf "12345678\n" | seid tx oracle aggregate-vote 1.5ueth $ADMIN_VAL_ADDR -b block -y --from $NEW_FEEDER_ADDR --gas 0 --output json | jq -r ".code"
       env: NEW_FEEDER_VOTE_ERROR_CODE
     # set old feeder addr again
-    - cmd: printf "12345678\n" | seid tx oracle set-feeder $OLD_FEEDER_ADDR -b block -y --from admin --fees 2000usei --output json | jq -r ".code"
-    # restart oracle price feeder
-    - cmd: systemctl stop oracle-price-feeder
+    - cmd: printf "12345678\n" | seid tx oracle set-feeder $OLD_FEEDER_ADDR -b block -y --from node_admin --fees 2000usei --output json | jq -r ".code"
   verifiers:
     # verify that error code == 0 for setting feeder AND oracle vote
     - type: eval
