--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -94,6 +94,7 @@ jobs:
           done
           unset IFS  # revert the internal field separator back to default
   check:
+    name: Integration Test Check
     runs-on: ubuntu-latest
     needs: build # This job will only run if all 'build' jobs have completed successfully
     steps:
