--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -15,7 +15,7 @@ defaults:
 
 jobs:
   build:
-    name: Integration Test
+    name: Integration Test (${{ matrix.test.name }})
     runs-on: ubuntu-latest
     timeout-minutes: 20
     env:
@@ -48,6 +48,12 @@ jobs:
             name: "Mint Module",
             scripts: [
               "python3 integration_test/scripts/runner.py integration_test/mint_module/mint_test.yaml"
+            ]
+          },
+          {
+            name: "Gov Module",
+            scripts: [
+              "python3 integration_test/scripts/runner.py integration_test/gov_module/gov_proposal_test.yaml"
             ]
           },
         ]
