--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -14,7 +14,7 @@ defaults:
     shell: bash
 
 jobs:
-  build:
+  integration-tests:
     name: Integration Test (${{ matrix.test.name }})
     runs-on: ubuntu-latest
     timeout-minutes: 20
@@ -105,10 +105,10 @@ jobs:
             bash -c "${script}"
           done
           unset IFS  # revert the internal field separator back to default
-  check:
+  integration-test-check:
     name: Integration Test Check
     runs-on: ubuntu-latest
-    needs: build # This job will only run if all 'build' jobs have completed successfully
+    needs: integration-tests # This job will only run if all 'build' jobs have completed successfully
     steps:
       - name: Check
         run: echo "All tests have passed!"
