--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -86,3 +86,10 @@ jobs:
           file: ./coverage.txt
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
+  unit-test-check:
+    name: Unit Test Check
+    runs-on: ubuntu-latest
+    needs: tests # This job will only run if all 'tests' jobs have completed successfully
+    steps:
+      - name: Check
+        run: echo "All tests have passed!"
