--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -109,7 +109,7 @@ jobs:
   integration-test-check:
     name: Integration Test Check
     runs-on: ubuntu-latest
-    needs: integration-tests # This job will only run if all 'build' jobs have completed successfully
+    needs: integration-tests # This job will only run if all 'integration-tests' jobs have completed successfully
     steps:
       - name: Check
         run: echo "All tests have passed!"
