--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -14,7 +14,7 @@ defaults:
     shell: bash
 
 jobs:
-  build:
+  integration-tests:
     name: Integration Test (${{ matrix.test.name }})
     runs-on: ubuntu-latest
     timeout-minutes: 20
@@ -48,6 +48,12 @@ jobs:
             name: "Mint Module",
             scripts: [
               "python3 integration_test/scripts/runner.py integration_test/mint_module/mint_test.yaml"
+            ]
+          },
+          {
+            name: "Staking Module",
+            scripts: [
+              "python3 integration_test/scripts/runner.py integration_test/staking_module/staking_test.yaml"
             ]
           },
           {
@@ -99,3 +105,11 @@ jobs:
             bash -c "${script}"
           done
           unset IFS  # revert the internal field separator back to default
+
+  integration-test-check:
+    name: Integration Test Check
+    runs-on: ubuntu-latest
+    needs: integration-tests # This job will only run if all 'integration-tests' jobs have completed successfully
+    steps:
+      - name: Check
+        run: echo "All tests have passed!"
