--- a/integration_test/dex_module/place_order_test.yaml
+++ b/integration_test/dex_module/place_order_test.yaml
@@ -20,3 +20,27 @@
     - type: regex
       result: RESULT
       expr: '^.*PLACED.*'
+
+- name: Test place multiple orders should give the correct asset denom
+  inputs:
+    # Get contract address, this requires contract already deployed
+    - cmd: tail -1 integration_test/contracts/mars-addr.txt
+      env: CONTRACT_ADDR
+    # Get admin account address
+    - cmd: printf "12345678\n" | seid keys show admin --output json |jq -r .address
+      env: ADMIN_ADDR
+    - cmd: seid q dex get-orders $CONTRACT_ADDR $ADMIN_ADDR --output json |jq ".[] | length"
+      env: ORDER_COUNT_BEFORE
+    # Prepare parameter
+    - cmd: echo "LONG?1.0?10?usei?uatom?LIMIT? LONG?3.0?3000?usei?uatomatomatom?LIMIT? LONG?3.0?1000?usei?uatomatom?LIMIT?"
+      env: PARAMS
+    # Place 3 orders
+    - cmd: printf "12345678\n" | seid tx dex place-orders $CONTRACT_ADDR $PARAMS --amount=1000000000usei -y --from=admin --chain-id=sei --fees=1000000usei --gas=50000000 --broadcast-mode=block --output json| jq .code
+
+    # Query all the orders
+    - cmd: seid q dex get-orders $CONTRACT_ADDR $ADMIN_ADDR --output json |jq ".[] | length"
+      env: ORDER_COUNT_AFTER
+  verifiers:
+    # Order id should be greater or equal to 0
+    - type: eval
+      expr: ( ORDER_COUNT_AFTER - ORDER_COUNT_BEFORE ) == 3
