--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -65,7 +65,8 @@ jobs:
           {
             name: "Oracle Module",
             scripts: [
-              "python3 integration_test/scripts/runner.py integration_test/oracle_module/set_feeder_test.yaml"
+              "python3 integration_test/scripts/runner.py integration_test/oracle_module/set_feeder_test.yaml",
+              "python3 integration_test/scripts/runner.py integration_test/oracle_module/verify_penalty_counts.yaml"
             ]
           },
         ]
