Oracle integration tests (#902)
* add oracle integration tests

* fix integration test

* add oracle to github workflow

* Add penalty count integration tests

* update comment

* switch order of oracle tests

* lower success rate assrtion

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -62,6 +62,13 @@ jobs:
               "python3 integration_test/scripts/runner.py integration_test/gov_module/gov_proposal_test.yaml"
             ]
           },
+          {
+            name: "Oracle Module",
+            scripts: [
+              "python3 integration_test/scripts/runner.py integration_test/oracle_module/verify_penalty_counts.yaml",
+              "python3 integration_test/scripts/runner.py integration_test/oracle_module/set_feeder_test.yaml"
+            ]
+          },
         ]
     steps:
       - uses: actions/checkout@v3
