--- a/integration_test/oracle_module/verify_penalty_counts.yaml
+++ b/integration_test/oracle_module/verify_penalty_counts.yaml
@@ -13,7 +13,7 @@
     - cmd: expr $BLOCK_HEIGHT % $ORACLE_SLASH_WINDOW
       env: WINDOW_PROGRESS
     # get expected number of penalty counts
-    - cmd: expr $WINDOW_PROGRESS / $VOTE_PERIOD
+    - cmd: expr \($WINDOW_PROGRESS + 1 \)  / $VOTE_PERIOD
       env: EXPECTED_COUNTS
     # Get admin val addr
     - cmd: printf "12345678\n" | seid keys show node_admin --bech val --output json | jq -r ".address"
@@ -39,7 +39,7 @@
   verifiers:
     # verify total counts GEQ expected: not asserting equal due to block movement between evaluation
     - type: eval
-      expr: ( TOTAL_COUNT == EXPECTED_COUNTS ) or ( TOTAL_COUNT == EXPECTED_COUNTS + 1 )
+      expr: TOTAL_COUNT == EXPECTED_COUNTS
     # verify success rate > 5% to ensure some successes and that theyre about slash threshold
     - type: eval
       expr: SUCCESS_PERCENT >= 5
