--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -59,7 +59,7 @@ jobs:
           {
             name: "Gov Module",
             scripts: [
-              "python3 integration_test/scripts/runner.py integration_test/gov_module/gov_proposal_test.yaml"
+              "python3 integration_test/scripts/runner.py integration_test/gov_module/gov_proposal_test.yaml",
               "python3 integration_test/scripts/runner.py integration_test/gov_module/staking_proposal_test.yaml"
             ]
           },
