--- a/integration_test/dex_module/cancel_order_test.yaml
+++ b/integration_test/dex_module/cancel_order_test.yaml
@@ -15,8 +15,10 @@
     # Cancel the order
     - cmd: printf "12345678\n" | seid tx dex cancel-orders $CONTRACT_ADDR $PARAMS -y --from=admin --chain-id=sei --fees=1000000usei --gas=50000000 --broadcast-mode=block --output json
       env: RES
+    - cmd: printf "12345678\n" | seid keys show admin --output json |jq -r .address
+      env: ADMIN_ADDR
     # Query the order by id
-    - cmd: seid q dex get-orders-by-id $CONTRACT_ADDR SEI ATOM $ORDER_ID --output json | jq ".[] | length"
+    - cmd: seid q dex get-orders $CONTRACT_ADDR $ADMIN_ADDR --output json |jq ".[] | length"
       env: NUMORDER
   verifiers:
     - type: eval
