--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -30,7 +30,8 @@ jobs:
             name: "Dex Module",
             scripts: [
               "docker exec sei-node-0 integration_test/contracts/deploy_dex_contract.sh mars",
-              "python3 integration_test/scripts/runner.py integration_test/dex_module/place_order_test.yaml"
+              "python3 integration_test/scripts/runner.py integration_test/dex_module/place_order_test.yaml",
+              "python3 integration_test/scripts/runner.py integration_test/dex_module/cancel_order_test.yaml"
             ]
           },
           {
