--- a/docker/localnode/config/app.toml
+++ b/docker/localnode/config/app.toml
@@ -195,7 +195,8 @@ snapshot-interval = 100
 # snapshot-keep-recent specifies the number of recent snapshots to keep and serve (0 to keep all).
 snapshot-keep-recent = 3
 
-snapshot-directory = "./build/generated/snapshots"
+# snapshot-directory specifies and overrides the directory for where to store the snapshots
+snapshot-directory = ""
 
 [wasm]
 # This is the maximum sdk gas (wasm and storage) that we allow for any x/wasm "smart" queries
